@@ -10,6 +10,7 @@ utils:
 service-edit: new filters 'object is.unused.recursive' to check if an object is used in groups/nested groups which are not used either
 rules-edit: new actions 'src-Negate-Set','dst-Negate-Set' to enable/disable a rule Source/Destination negation
                         'target-Set-Any','target-Add-Device','target-Negate-Set','target-RemoveDevice' to manage targets
+                        'clone' to clone rules before/after another rule and add a suffix
 
 bugfix:
 - typos in service-edit action prefix-add suffix-add
